cart page deployment

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
@@ -47,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.5.0"
+    "react-router-dom": "^6.6.1"
   }
 }
